enable multiple upload with respective loading bar

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,9 +5,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1rem;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button {
+  font-size: 2em;
+  box-sizing: border-box !important;
+  text-align: center;
+}
+
+.txt-elips {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+// @font-face {
+//   font-family: 'GorditaBold';
+//   src: local('GorditaBold'), url(./fonts/GorditaBold.woff) format('woff');
+// }
