--- a/src/App.scss
+++ b/src/App.scss
@@ -8,21 +8,18 @@
   width: 100%;
   flex-direction: column;
   border: 2px dotted #dbe0e6;
-  padding: 10px;
+  padding: 20px;
   margin: 10px;
+  box-sizing: border-box;
 }
 
-.pry-btn {
-  width: 200px;
-  padding: 10px 20px;
-  background-color: $primary-color;
+.pry-txt {
+  padding: 5px;
+  color: #07f;
   border: 0;
   border-radius: 2px;
   margin: 5px;
-  color: #fff;
-  &:hover {
-    background-color: $primary-color_h;
-  }
+  font-size: 1rem;
 }
 .canc {
   color: grey;
